[tool.poetry]
name = "stackopenflow"
version = "0.1.0"
description = "StackOpenflow API (Python/Django backend) made for DjangoCon EU 2021"
authors = ["dhilipsiva <dhilipsiva@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.2"
graphene-django = "^2.15.0"
celery = "^5.0.5"
boto3 = "^1.17.74"
django-graphql-social-auth = {extras = ["jwt"], version = "^0.1.4"}
psycopg2 = "^2.8.6"
django-extensions = "^3.1.3"

[tool.poetry.dev-dependencies]
ipython = "^7.23.1"
neovim = "^0.3.1"
flake8 = "^3.9.1"
isort = "^5.8.0"
black = "^21.5b0"
ipdb = "^0.13.7"
django-extensions = "^3.1.3"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
# Make sure this matches `*.py` in .editorconfig
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
